@@ -388,6 +388,25 @@ var exceptions         = require('./exceptions.js'),
             inflatedPlugin.scenarios[scenarioName] = scenarioDefinition;
         });
 
+        // Check for unknown properties in scenarios
+        for (var scenarioName in inflatedPlugin.scenarios) {
+            var scenario = inflatedPlugin.scenarios[scenarioName];
+            if (!('heads' in scenario)) {
+                throw new InvalidRoboHydraPluginException(
+                    "Scenario '" + scenarioName + "' doesn't contain any heads"
+                );
+            }
+
+            for (var prop in scenario) {
+                if (['heads', 'instructions'].indexOf(prop) === -1) {
+                    throw new InvalidRoboHydraPluginException(
+                        "Invalid scenario property '" + prop + "' in " +
+                            "scenario '" + scenarioName + "'"
+                    );
+                }
+            }
+        }
+
         // Check and set the name
         if (! this._validatePluginName(pluginInfo.name)) {
             throw new InvalidRoboHydraPluginException("Invalid plugin name '" +
